--- a/e-com/package.json
+++ b/e-com/package.json
@@ -15,6 +15,7 @@
   "dependencies": {
     "concurrently": "^9.0.1",
     "express": "^4.21.0",
-    "nodemon": "^3.1.7"
+    "nodemon": "^3.1.7",
+    "react-icons": "^5.3.0"
   }
 }
