--- a/e-com/package.json
+++ b/e-com/package.json
@@ -14,6 +14,7 @@
   "license": "ISC",
   "dependencies": {
     "concurrently": "^9.0.1",
+    "cors": "^2.8.5",
     "express": "^4.21.0",
     "nodemon": "^3.1.7",
     "react-icons": "^5.3.0"
