--- a/e-com/package.json
+++ b/e-com/package.json
@@ -17,8 +17,10 @@
   "dependencies": {
     "bcrypt": "^5.1.1",
     "concurrently": "^9.0.1",
+    "cookie-parser": "^1.4.7",
     "cors": "^2.8.5",
     "express": "^4.21.0",
+    "jsonwebtoken": "^9.0.2",
     "mongoose": "^8.7.0",
     "nodemon": "^3.1.7",
     "react-icons": "^5.3.0"
